[package]
name = "uefirc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.20"
uefi = { version = "0.27.0", features = ["alloc"], optional = true }
uefi-services = { version = "0.24.0", optional = true }
ttf_renderer = { git = "https://github.com/codyd51/axle", branch="paging-demo" }
agx_definitions = { git = "https://github.com/codyd51/axle", branch="paging-demo" }
libgui = { git = "https://github.com/codyd51/axle", branch="paging-demo" }
libgui_derive = { git = "https://github.com/codyd51/axle", branch="paging-demo" }
spin = "0.9.8"

# Only enabled in run_hosted mode
pixels = { version = "0.13.0", optional = true }
winit = { version = "0.29.10", optional = true }

[features]
run_in_uefi = ["uefi", "uefi-services", "ttf_renderer/no_std", "agx_definitions/no_std", "libgui/run_in_uefi"]
run_hosted = ["pixels", "winit", "libgui/run_with_std"]
